src/test/ui/test-attrs/test-warns-dead-code.stderr
error: function is never used: `dead`
  --> $DIR/test-warns-dead-code.rs:5:4
   |
LL | fn dead() {}
   |    ^^^^ help: if this is intentional, prefix it with an underscore: `_dead`
   |
   = note: the leading underscore helps signal to the reader that the function may still serve
           a purpose even if it isn't used in a way that we can detect (e.g. the function
           is only used through FFI or used only for its effect when dropped)
note: the lint level is defined here
  --> $DIR/test-warns-dead-code.rs:3:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: aborting due to previous error

